[package]
name = "rufl"
version = "0.1.0"
edition = "2021"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Number theory library using FLINT 3."
homepage = "https://github.com/wjyoumans/rufl"
repository = "https://github.com/wjyoumans/rufl"
license = "GPL-3.0-or-later" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms",  "mathematics"]
readme = "README.md"


[features]
default = []
serde = ["dep:serde"]

[dependencies]
libc = "0.2" 
thiserror = "1.0"

[dependencies.flint-sys]
path = "../flint-rs/flint-sys"
version = "0.8"
features = ["disable-make-check"]

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]

[profile.release]
lto = "thin"
